[package]
name = "rust-mqtt"
version = "0.1.0"
authors = ["Lucas Antunes <lucasba8@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mqtt-protocol = "0.8.1"
bytes = "0.5.3"
uuid = { version = "0.8.1", features = ["v4"] }